--- a/to-do_app/api/web_dynamic/templates/index.html
+++ b/to-do_app/api/web_dynamic/templates/index.html
@@ -9,16 +9,18 @@
 		<hr>
 		<ul>
 			{% for category in categories %}
-			<li><h4>{{ category.title }}</h4></li>
-			<ul>
-				{% for task in tasks %}
-				{% if task.category_id == category.id %}
-				{% if task.title != None %}
-				<li><h6><b>{{ task.title }}:</b></h6></br>   {{ task.description }}</li>
-				{% endif %}
-				{% endif %}
-				{% endfor %}
-			</ul>
+			<li>
+				<h4>{{ category.name }}</h4>
+				<ul>
+					{% for task in tasks %}
+					{% if task['category_id'] == category.id %}
+					<li>
+						<h6><b>{{ task.title }}:</b></br>   {{ task.description }}</h6>
+					</li>
+					{% endif %}
+					{% endfor %}
+				</ul>
+			</li>
 			{% endfor %}
 		</ul>
 	</body>
