--- a/to-do_app/api/web_dynamic/templates/index.html
+++ b/to-do_app/api/web_dynamic/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link href="../styles/style.css"/>
+		<link href="styles/style.css"/>
 		<title>Dennis Todo</title>
 	</head>
 	<body>
