--- a/to-do_app/api/web_dynamic/templates/index.html
+++ b/to-do_app/api/web_dynamic/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="../styles/style.css">
+		<link rel="stylesheet" type="text/css" href="../static/styles/style.css">
 		<title>Dennis Todo</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script>src="../styles/script.js"</script>
