--- a/to-do_app/api/web_dynamic/templates/index.html
+++ b/to-do_app/api/web_dynamic/templates/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../static/styles/style.css">
 		<title>Dennis Todo</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script src="../styles/script.js"></script>
+		<script src="../static/styles/script.js"></script>
 	</head>
 	<body>
 		<header>Welcome {{ users[0] }}</header>
