--- a/to-do_app/api/web_dynamic/templates/index.html
+++ b/to-do_app/api/web_dynamic/templates/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../static/styles/style.css">
 		<title>Dennis Todo</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script src="../static/styles/script.js"></script>
+		<script src="../statici/styles/script.js"></script>
 	</head>
 	<body>
 		<header>Welcome {{ users[0] }}</header>
@@ -22,8 +22,7 @@
 			</ul>
 			{% endfor %}
 		</ul>
-		<div>
-			<button class="add">Add task</button>
-			<div class="form"></div>
+		<button class="add">Add task</button>
+		<div class="form"></div>
 	</body>
 </html>
